# django-forms-fieldset

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: test.yml
examples/: apps.py  tests.py  views.py
examples/migrations/: 0001_initial.py
examples/project/app/: apps.py  forms.py  models.py  tests.py
examples/project/app/templates/: home.html
examples/project/project/: settings.py  urls.py
forms_fieldset/: apps.py
forms_fieldset/static/forms_fieldset/css/: main.css
forms_fieldset/templates/forms_fieldset/: fieldset.html  tabular.html
forms_fieldset/templatetags/: forms_fieldset.py
