[metadata]
name = django-forms-fieldset
version = 0.1.2
description = Django form fieldset inspire django admin fieldset.
long_description = file: README.rst
url = https://github.com/hadpro24/django-forms-fieldset
author = Harouna Diallo
author_email = dev.harouna@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
